tests/typing/fail/blk_last_arg_fail1.rb

def f(x,y,&blk)
  x + y
end


def g(&blk)
  f(1,&blk)
end


g()
